--- a/app/views/chat/index.html.erb
+++ b/app/views/chat/index.html.erb
@@ -1,7 +1,10 @@
-<input type='text' id='chat-text'>
-<input type='button' id='send' value='送信' onClick='speak()'>
+<%= render partial: 'shared/header', locals: {title: 'チャット'} %>
+<div class='container'>
+    <input type='text' id='chat-text'>
+    <input type='button' id='send' value='送信' onClick='speak()'>
 
-<div id='chats'>
+    <div id='chats'>
+    </div>
 </div>
 
 <script>
