講師に通知するものをseat_idからpositionに変更

--- a/app/views/member/index.html.erb
+++ b/app/views/member/index.html.erb
@@ -8,6 +8,6 @@
 
 <script>
   function speak(){
-    App.summon.summon(<%= session['seat_id']%>);
+    App.summon.summon("<%= @seat.try(:position) %>");
   }
 </script> 
